# minilang

./: .gitignore  CMakeLists.txt  README.md  ebnf.txt  example.txt
include/: ast.hpp  codegen.hpp  grammar.hpp  irgen.hpp  lexer.hpp  parser.hpp  semantic.hpp  symbol.hpp  token.hpp
include/minilang/: ast.hpp  lexer.hpp  token.hpp
src/: codegen.cpp  grammar.cpp  irgen.cpp  lexer.cpp  main.cpp  parser.cpp  semantic.cpp  symbol.cpp  token.cpp
syscalls/: syscalls.s
test/integration/: test_compiler.cpp
test/unit/: test_grammar.cpp  test_lexer.cpp  test_parser.cpp  test_semantic.cpp  test_symbol.cpp
